# AugmentusAssignment

./: README.md  pyproject.toml
src/augmentus/pointcloudprocessor/: cluster.py  estimate_normal.py  process_eagle.py  process_pointcloud.py  render.py  resample.py
tests/: conftest.py
tests/augmentus/pointcloudprocessor/: test_cluster.py  test_resample.py
